# dfipy-examples

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.binderhub  Makefile  README.md  gl-sbom-pypi-poetry.cdx.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/blog/skewness_and_noise/: README.md  data_skewness.ipynb  data_with_noise.ipynb  data_with_noise_multiple_devices.ipynb  dwells_geometries.py  geoutils.py  helpers_visualisation.py  kepler_configs.py  noisyfier.py  requirements.txt  simulate_data.py
examples/: dfipy_quick_start_create_a_polygon.ipynb  dfipy_quick_start_geolife.ipynb  dfipy_quick_start_syn_traffic.ipynb
examples/datasets/: london_boroughs.json  london_congestion_zone.json
examples/kepler_config/: create_a_polygon.json  geolife.json  syn_traffic.json
